# tracker

./: data.db  home.py  pyproject.toml  replit.nix
attached_assets/: Pasted-Errore-nella-verifica-della-tabella-studenti-code-PGRST100-details-unexpected-expect-1740653977866.txt
pages/: 1_studenti.py  2_pagamenti.py  3_libreria.py  4_impostazioni.py
utils/: auth.py  database.py  helpers.py  image_processor.py  supabase_db.py
